--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     <aside>
-        
+        <div class="preto">
+            <img src="./img/Menu.png" alt="menu" class="menu">
+            <h1>Design by GuiguiEM</h1>
+        </div>
+        <div class="amarelo">
+            <img src="./img/Instagram.png" alt="instagram" class="instagram">
+            <img src="./img/Facebook.png" alt="facebook" class="facebook">
+            <img src="./img/Twitter.png" alt="twitter" class="twitter">
+        </div>
     </aside>
 </body>
 </html>
