--- a/index.html
+++ b/index.html
@@ -18,5 +18,18 @@
             <img src="./img/Twitter.png" alt="twitter" class="twitter">
         </div>
     </aside>
+    <main>
+        <nav>
+            <img src="./img/Talheres.png" alt="talheres" class="talheres">
+            <p>Home</p>
+            <p>About</p>
+            <p>Recipes</p>
+        </nav>
+        <header></header>
+        <section>
+            <section class="section1"></section>
+            <section class="section2"></section>
+        </section>
+    </main>
 </body>
 </html>
