--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         </div>
     </aside>
     <main>
-        <nav>
+        <!-- <nav>
+            <div class="separacao"></div>
             <img src="./img/Talheres.png" alt="talheres" class="talheres">
             <p>Home</p>
             <p>About</p>
             <p>Recipes</p>
-        </nav>
-        <header></header>
+        </nav> -->
         <section>
             <section class="section1"></section>
             <section class="section2"></section>
