--- a/index.html
+++ b/index.html
@@ -19,17 +19,20 @@
         </div>
     </aside>
     <main>
-        <!-- <nav>
-            <div class="separacao"></div>
-            <img src="./img/Talheres.png" alt="talheres" class="talheres">
-            <p>Home</p>
-            <p>About</p>
-            <p>Recipes</p>
-        </nav> -->
+        <div class="centro">
+            <header>
+                <img src="./img/Talheres.png" alt="talheres" class="talheres">
+                <p>Home</p>
+                <p>About</p>
+                <p>Recipes</p>
+            </header>
+        </div>
         <section>
             <section class="section1"></section>
             <section class="section2"></section>
         </section>
     </main>
+    <div class="explore"></div>
+    <div class="perfil"></div>
 </body>
 </html>
