--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
             <section class="section2"></section>
         </section>
     </main>
-    <div class="explore"></div>
-    <div class="perfil"></div>
+    <div class="explore">EXPLORE NOW</div>
+    <div class="perfil">
+        <img src="./img/Usuario.png" alt="usuario" class="usuario">
+        <div class="login">LOG IN</div>
+    </div>
 </body>
 </html>
