--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <aside>
         <div class="preto">
             <img src="./img/Menu.png" alt="menu" class="menu">
-            <h1>Design by GuiguiEM</h1>
+            <div class="sidetext">Design by GuiguiEM</div>
         </div>
         <div class="amarelo">
             <img src="./img/Instagram.png" alt="instagram" class="instagram">
@@ -26,13 +26,37 @@
                 <p>About</p>
                 <p>Recipes</p>
             </header>
+            <div class="text">
+                <h1>EAT HEALTHY</h1>
+                <h1>EAT TASTY</h1>
+                <H2>“Start Your Day Off Right With Our Delicious Breakfast Options, Freshly Prepared Just For You.
+                    From Fluffy Pancakes To Hearty Omelets, We’ve Got Everything You Need To Fuel Your Morning And Satisfy Your Taste Buds. Come And Join Us For Breakfast Today!”</H2>
+            </div>
         </div>
+        <div class="explore">EXPLORE NOW</div>
         <section>
-            <section class="section1"></section>
-            <section class="section2"></section>
+            <section class="section1">
+                <div class="content">
+                    <h3>Cheesy Grits With </h3>
+                    <h3>Fried Eggs And Bacon</h3>
+                    <h4>Cheesy Grits Topped With A Jammy Fried Egg, Burst Tomatoes, Avocado, And Crumbled Bacon.</h4>
+                    <div class="lista">
+                        <h5>. SERVES 4</h5>
+                        <h5>. PREP 5 Minutes</h5>
+                        <h5>. COOK 40 Minutes to 40 Minutes</h5>
+                    </div>
+                    <footer>
+                        <h6>Read More</h6>
+                        <img src="./img/Seta.png" alt="section" class="seta">
+                    </footer>
+                </div>
+            </section>
+            <section class="section2">
+                <img src="./img/Video.png" alt="video" class="video">
+                <img src="./img/Play.png" alt="play" class="play">
+            </section>
         </section>
     </main>
-    <div class="explore">EXPLORE NOW</div>
     <div class="perfil">
         <img src="./img/Usuario.png" alt="usuario" class="usuario">
         <div class="login">LOG IN</div>
